# evogression

./: .gitignore  Cargo.toml  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
evogression/: __init__.py  _version.py  calc_error_sum.pyx  calc_target_c.c  calc_target_cython.pyx  creatures.py  data.py  evolution.py  evolution_group.py  generate_parameter_coefficients_calc.pyx  groups.py  single_layer_calc.pyx  standardize.py
pyo3/: Cargo.toml  build_rust_extension.bat  run_clippy.bat
pyo3/src/: creature.rs  evolution.rs  lib.rs  standardize.rs
src/: creature.rs  evolution.rs  lib.rs  standardize.rs
tests/: __init__.py  creature_test.py  data.txt  data_examples.py  dataframe_test.py  evolution_group_test.py  evolution_test.py  fitting_test.py  group_composite_prediction_test.py  group_test.py  input_data_test.py  linear_regression_approximation_test.py  none_filling_test.py  parabola_regression_evolution_test.py  parameter_pruning_evolution_test.py  parameter_pruning_test.py  population_test.py  standardizing_test.py  surface_3d_population_regression_test.py  surface_3d_regression_evolution_test.py  surface_evolution_test.py  surface_group_test.py  test_data.py  test_data_many_dimensions.py  test_memory.py
tests/breast_cancer_classification/: SOURCE.txt  breast-cancer-wisconsin.data  breast_cancer_regression_evolution_test.py  regression_function.py
tests/profiling/: evogression_testing.py  evogression_testing_memory_usage.py  evogression_testing_multip.py  profile_evolution.bat  profile_evolution_multip.bat
(+1 files in other folders)
